adding new files

--- a/explore_zillow.ipynb
+++ b/explore_zillow.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "174857fc",
+   "execution_count": 10,
+   "id": "78e38aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn.preprocessing\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "from wrangle import wrangle_zillow"
    ]
@@ -23,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5eb3dffb",
+   "id": "09428994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3138f2f6",
+   "id": "07fb5cda",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b3bae7d2",
+   "id": "405c153d",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "63cbacac",
+   "id": "bf6eeb12",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "589110dc",
+   "id": "e667a10e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ddf2ad2b",
+   "id": "471c1b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f4333eac",
+   "id": "9ad131d5",
    "metadata": {},
    "outputs": [
     {
@@ -998,8 +999,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "8215506c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# def train_validate_test_split(df):\n",
+    "#     '''\n",
+    "#     This function performs split on telco data, stratify churn.\n",
+    "#     Returns train, validate, and test dfs.\n",
+    "#     '''\n",
+    "#     train_validate, test = train_test_split(df, test_size=.2, \n",
+    "#                                         random_state=123, stratify=df.fips)\n",
+    "#     train, validate = train_test_split(train_validate, test_size=.3, \n",
+    "#                                    random_state=123,  stratify=train_validate.fips)\n",
+    "\n",
+    "#     return train, validate, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "25ac132b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train, validate, test = train_validate_test_split(df)\n",
+    "\n",
+    "\n",
+    "# train.shape, validate.shape, test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b66d67a6",
+   "id": "0ce77811",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1007,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b77a40",
+   "id": "4c0d9ad7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1015,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968f9ec0",
+   "id": "5cf3b284",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1023,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ddcc24",
+   "id": "2750ec00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1031,23 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273f5b03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4ca0fe7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d554a35d",
+   "id": "2809405f",
    "metadata": {},
    "outputs": [],
    "source": []
