--- a/explore_and_model_zillow.ipynb
+++ b/explore_and_model_zillow.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7fa98797",
+   "id": "5f6c2bc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ab4652d",
+   "id": "55cd24c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0c2ff480",
+   "id": "4903276c",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ae362fb5",
+   "id": "6306486e",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b2fc005e",
+   "id": "8fe2978b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91364d09",
+   "id": "e2382d9a",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a446845d",
+   "id": "6501b991",
    "metadata": {
     "scrolled": true
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015a0874",
+   "id": "a4abce75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a5b43051",
+   "id": "4b4e3e5b",
    "metadata": {
     "scrolled": false
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7011f9f8",
+   "id": "f452a031",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f65b1f62",
+   "id": "72b69f93",
    "metadata": {
     "scrolled": true
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d52cef",
+   "id": "aa187c70",
    "metadata": {},
    "source": [
     "## Question 1 - Is log error significantly different for properties in the three counties?\n",
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ab2d1e5",
+   "id": "94bffd90",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9288e027",
+   "id": "731de01b",
    "metadata": {},
    "outputs": [
     {
@@ -703,14 +703,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5a6751",
+   "id": "13c93bd2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "09e2812f",
+   "id": "1944c9e7",
    "metadata": {},
    "source": [
     "## Question 2 - Is log error significantly different for properties that have diffrent bathroom counts "
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7a44bfd5",
+   "id": "847eaffe",
    "metadata": {
     "scrolled": true
    },
@@ -754,14 +754,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d30956b0",
+   "id": "e06492da",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1568ac82",
+   "id": "8402abb3",
    "metadata": {},
    "source": [
     "## Question 3 - Is log error significantly different for properties that have diffrent bedroom counts"
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "5b404f0b",
+   "id": "901d9351",
    "metadata": {},
    "outputs": [
     {
@@ -803,14 +803,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5273bcd",
+   "id": "5b44ad48",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "75155511",
+   "id": "17031dcd",
    "metadata": {},
    "source": [
     "## Question 4 -  Is log error significantly different for properties that have diffrent tax values"
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3d10be28",
+   "id": "1086129c",
    "metadata": {
     "scrolled": true
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d8d06c",
+   "id": "79a4de69",
    "metadata": {},
    "source": [
     "Null hypothesis: There is no correlation between price and log error.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9837be14",
+   "id": "e5e1f3e3",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9e73cca",
+   "id": "581cedb8",
    "metadata": {},
    "outputs": [
     {
@@ -910,14 +910,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdddbbcf",
+   "id": "94e9f238",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "24c3b296",
+   "id": "585cdbdb",
    "metadata": {},
    "source": [
     "## Scalign the data"
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3e0023b9",
+   "id": "0f2bc199",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a26ba65d",
+   "id": "057c3eef",
    "metadata": {},
    "source": [
     "Scaing for thr fisrt cluster "
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "82fd32ce",
+   "id": "14e618ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ed8ca14",
+   "id": "af31ca91",
    "metadata": {
     "scrolled": true
    },
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "55f818ae",
+   "id": "d9b1b3f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b24f88be",
+   "id": "2e0d3910",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f0be9a",
+   "id": "4f62e9f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1760,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d1a251",
+   "id": "9862f884",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9117cc",
+   "id": "7eb00d0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1776,14 +1776,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bef638",
+   "id": "3eb83f1a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "efc4b5b8",
+   "id": "b097c65b",
    "metadata": {},
    "source": [
     "## Clustering "
@@ -1791,7 +1791,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d31c66",
+   "id": "fc39f16b",
+   "metadata": {},
+   "source": [
+    "using the elbow method\n",
+    "- we'll look for the \"elbow\" of the curve, or the point where adding additional clusters doesn't give us as big of a reduction in inertia.\n",
+    "- To use the elbow method, we'll visualize the inertia against our choice in number of clusters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e98f73",
    "metadata": {},
    "source": [
     "###  first cluster - size= bed bath, sqft "
@@ -1800,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9ce5f2d5",
+   "id": "55273ab6",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "38a2cbad",
+   "id": "20983427",
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "22837d27",
+   "id": "b32cad5b",
    "metadata": {
     "scrolled": false
    },
@@ -2178,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "9508803e",
+   "id": "527d1cba",
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f3717c42",
+   "id": "a79efc46",
    "metadata": {
     "scrolled": true
    },
@@ -2240,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9692dd85",
+   "id": "fed8a8a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,14 +2260,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c249560",
+   "id": "a0a04a40",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2c5d5d25",
+   "id": "086f00e3",
    "metadata": {},
    "source": [
     "### second cluster - locations- log lat "
@@ -2266,7 +2276,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6876d7b1",
+   "id": "21433561",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "976d0858",
+   "id": "abeb97a6",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a93e89f7",
+   "id": "09fab7c8",
    "metadata": {
     "scrolled": true
    },
@@ -2400,7 +2410,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0d018f44",
+   "id": "b37dc4d7",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2681,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "82c81ebd",
+   "id": "8b497766",
    "metadata": {
     "scrolled": false
    },
@@ -2706,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2f6be346",
+   "id": "a00e9ab1",
    "metadata": {},
    "outputs": [
     {
@@ -2730,7 +2740,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "eff3ee41",
+   "id": "fafc97e9",
    "metadata": {},
    "outputs": [
     {
@@ -2804,7 +2814,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "72699fa6",
+   "id": "6f8dda5f",
    "metadata": {
     "scrolled": true
    },
@@ -2851,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b529e499",
+   "id": "0fb1528b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2860,7 +2870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c526ff7",
+   "id": "a254d46b",
    "metadata": {},
    "source": [
     "## third custer -size and age cluster -  age  and lotsize "
@@ -2869,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fc23799d",
+   "id": "96a534c3",
    "metadata": {},
    "outputs": [
     {
@@ -2949,7 +2959,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "2db3bbf4",
+   "id": "11f6bf4a",
    "metadata": {},
    "outputs": [
     {
@@ -2974,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "5ff90ac4",
+   "id": "c144fad5",
    "metadata": {},
    "outputs": [
     {
@@ -3001,7 +3011,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fefdeb8c",
+   "id": "7b053cce",
    "metadata": {},
    "outputs": [
     {
@@ -3285,7 +3295,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "ba54fbcd",
+   "id": "4b9e22f6",
    "metadata": {
     "scrolled": true
    },
@@ -3320,7 +3330,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "fe11a1cb",
+   "id": "9e4b07de",
    "metadata": {},
    "outputs": [
     {
@@ -3344,7 +3354,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f65d1640",
+   "id": "54437590",
    "metadata": {},
    "outputs": [
     {
@@ -3418,7 +3428,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "75dda780",
+   "id": "a1d387fb",
    "metadata": {},
    "outputs": [
     {
@@ -3462,7 +3472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "829e4815",
+   "id": "f385d19c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3471,7 +3481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4969136e",
+   "id": "4347e16a",
    "metadata": {},
    "source": [
     "## Using select k best to find the best fetures for modeling "
@@ -3480,7 +3490,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c9868a26",
+   "id": "11f3b89f",
    "metadata": {},
    "outputs": [
     {
@@ -3530,7 +3540,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "380d9d1d",
+   "id": "e01b6b7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3540,7 +3550,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "029a63ff",
+   "id": "a39502f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3559,7 +3569,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "77f752dc",
+   "id": "a768a746",
    "metadata": {},
    "outputs": [
     {
@@ -3581,7 +3591,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "122c15b8",
+   "id": "a821c0cc",
    "metadata": {},
    "outputs": [
     {
@@ -3745,7 +3755,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "c02980c8",
+   "id": "998f03cf",
    "metadata": {},
    "outputs": [
     {
@@ -3766,7 +3776,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "00482b95",
+   "id": "48f76b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3776,7 +3786,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "ecccc5ee",
+   "id": "343d2fc7",
    "metadata": {},
    "outputs": [
     {
@@ -3799,7 +3809,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "14939355",
+   "id": "feaa028f",
    "metadata": {},
    "outputs": [
     {
@@ -3942,7 +3952,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "4e24467a",
+   "id": "6c26c3c8",
    "metadata": {},
    "outputs": [
     {
@@ -3963,7 +3973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "038b0bb7",
+   "id": "eb62175f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3971,7 +3981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ea86e1",
+   "id": "90397d53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3979,14 +3989,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e95f0da",
+   "id": "20d4b2eb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7b2c6ff3",
+   "id": "0b27eb85",
    "metadata": {},
    "source": [
     "## MODELING"
@@ -3995,7 +4005,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "3aefaa8c",
+   "id": "b1321c84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4014,7 +4024,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "76bf1906",
+   "id": "9996d620",
    "metadata": {
     "scrolled": true
    },
@@ -4046,7 +4056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ef6780",
+   "id": "93dbcd4b",
    "metadata": {},
    "source": [
     "OLS"
@@ -4055,7 +4065,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "6b7ab8c4",
+   "id": "eb46c067",
    "metadata": {},
    "outputs": [
     {
@@ -4128,7 +4138,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "a70e53e6",
+   "id": "a18a17f2",
    "metadata": {},
    "outputs": [
     {
@@ -4156,7 +4166,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "c2777ff4",
+   "id": "df0a0038",
    "metadata": {},
    "outputs": [
     {
@@ -4196,14 +4206,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1adc057e",
+   "id": "02e44d57",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7eb9ca01",
+   "id": "7083e82f",
    "metadata": {},
    "source": [
     "Lasso Lars"
@@ -4212,7 +4222,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "fed199ba",
+   "id": "c6c9099f",
    "metadata": {},
    "outputs": [
     {
@@ -4251,7 +4261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612db929",
+   "id": "e94dfb0d",
    "metadata": {},
    "source": [
     "GLM"
@@ -4260,7 +4270,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5de6921a",
+   "id": "837cca29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4290,7 +4300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0644abf6",
+   "id": "03835d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4300,7 +4310,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0b9a74cf",
+   "id": "0a68c2f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4318,7 +4328,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1b40e69b",
+   "id": "ebfe5721",
    "metadata": {},
    "outputs": [
     {
@@ -4358,7 +4368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647d30f0",
+   "id": "ccffe25d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4366,7 +4376,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "86b2875b",
+   "id": "430eb866",
    "metadata": {},
    "outputs": [
     {
@@ -4400,7 +4410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d72b50",
+   "id": "d36fd47a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4435,7 +4445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77a000e3",
+   "id": "0ec6d6e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4443,7 +4453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69453104",
+   "id": "0bc2b131",
    "metadata": {},
    "outputs": [],
    "source": []
